Add softserve work experience

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 					<h2>CONTACT</h2>
 					<!-- contact info including social media -->
                     <p>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <a>Medellin, Colombia</a>
+                    </p>
+                    <p>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <a href="wa.me/573135751313">+57 313 575 1313</a>
+                    </p>
+                    <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <a href="mailto:rsanies9@gmail.com">rsanies9@gmail.com</a>
                     </p>
@@ -28,17 +36,62 @@
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/rafasanin">rafasanin</a>
+                        <a href="github.com/rafasanin">rafasanin (SoftServe)</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
                         <a href="linkedin.com/in/rafaelsanin">rafaelsanin</a>
                     </p>
+
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills AKA "buzzwords" -->
-                    <p>HTML, CSS, Javascript, Node, Python, Git, VS Code...</p>
+                    Frontend Technologies
+                    <ul>
+                        <li>React</li>
+                        <li>Redux</li>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                    Backend Technologies
+                    <ul>
+                        <li>Node.js</li>
+                        <li>Express</li>
+                        <li>Passport</li>
+                        <li>Microframeworks</li>
+                        <li>FastAPI</li>
+                        <li>Python</li>
+                        <li>PostgreSQL</li>
+                    </ul>
+                    Infrastructure and DevOps
+                    <ul>
+                        <li>AWS</li>
+                        <li>Terraform</li>
+                        <li>GCP Pub/Sub</li>
+                        <li>Elasticsearch</li>
+                        <li>MongoDB Atlas</li>
+                        <li>Apigee</li>
+                    </ul>
+                
+                    Data and Analytics
+                    <ul>
+                        <li>GraphQL/Apollo</li>
+                        <li>Segment</li>
+                        <li>Data cleansing scripts</li>
+                    </ul>
+                
+                    Version Control
+                    <ul>
+                        <li>Git</li>
+                    </ul>
+                    Other
+                    <ul>
+                        <li>Agile Methodologies (SCRUM)</li>
+                        <li>Stripe SDK</li>
+                    </ul>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
@@ -57,7 +110,46 @@
                     <p>
                         2011-2016
                     </p>
-				</section>            
+				</section> 
+                <section>
+					<h2>COURSE/CERTIFICATIONS</h2>
+					<!-- your courses/certifications -->
+                    <b>FrontEndMasters</b>
+                    <p>
+                        Web developer path
+                    </p>
+                    <b>Codecademy</b>
+                    <p>
+                        HTML/CSS
+                    </p>
+                    <b>Advanced Digital Systems (Full-stack)</b>
+                    <p>
+                        Eafit University MSc. elective course 
+                    </p>
+                    <p><a href="https://www.linkedin.com/in/victor-camargo-4266684a/">Prof. Victor Camargo</a></p>
+                    <b>Agile Methodologies: SCRUM</b>
+                    <p>
+                        Eafit University MSc. elective course 
+                    </p>
+                    <a href="file:///C:/Users/rsanies9/Desktop/linkedin.com/in/césar-jesús-pardo-calvache-01a82b2a">Prof. Cesar Pardo</a>
+				</section> 
+                <section>
+					<h2>LANGUAGES</h2>
+					<!-- languages proficiency -->
+                    <b>English</b>
+                    <p>
+                        C1
+                    </p>
+                    <b>Spanish</b>
+                    <p>
+                        Native
+                    </p>
+                    <b>German</b>
+                    <p>
+                        A2
+                    </p>
+
+				</section>             
 			</article>
 			<article id="mainRight">
 				<section>
@@ -73,14 +165,14 @@
                             SoftServe | sept 2023 - ongoing (5 months)
                     </p>
                     <p>
-                        Provided full-stack development support for B2C and B2B applications.
+                        As a full-stack developer for a Real Estate client, I drove key improvements across both frontend and backend functionalities.
                     </p>
                     <ul>
-                        <li><b>Full-stack development:</b> Built new features, conducted testing, and fixed bugs within the B2C and B2B apps using Next.js, GraphQL/Apollo, Express, Passport, and Micro frameworks. Collaborated with the data team by leveraging FastAPI and Python for crawling services.</li>
-                        <li><b>Infrastructure and database management:</b> Implemented changes to the application's infrastructure using AWS and Terraform. Supported modifications to the PostgreSQL database.</li>
-                        <li><b>Business logic updates:</b> Integrated the Stripe SDK to update business logic with new plans, prices, and promotional codes.</li>
-                        <li><b>Analytics tracking:</b> Created a Node.js library with decorators to seamlessly integrate Segment SDK into core services (accounts, auth, and GraphQL).</li>
-                    </ul> 
+                        <li><b>Boosted Search and Data Management</b>: Enhanced search accuracy for complex addresses with <u>Elasticsearch</u> and <u>MongoDB Atlas</u>, automated data cleansing scripts for birthday fields of +10k documents in <u>Atlas</u>, and integrated duplicate address handling in the import microservice.</li>
+                        <li><b>Optimized User Experience</b>: Introduced a comprehensive <u>React Redux</u> modal for improved interaction, implemented clear error messages, and refreshed UI aesthetics with updated dropdown styles.</li>
+                        <li><b>Ensured Microservice Integration and Optimization</b>: Updated <u>GCP pubsub</u> message payloads for seamless microservice communication and fixed pagination issues for smooth API integration with <u>Apigee</u>.</li>
+                        <li><b>Developed Additional Functionality</b>: Built custom <u>Node.js</u> scripts for data manipulation and added new timeline message events to enhance user engagement.</li>
+                      </ul>                                            
                     <h3><b>Backend Developer</b></h3>
                     <p>
                             AllTheRooms Inc. | mar 2022 - sept 2023 (2 years and 7 months)
@@ -93,7 +185,22 @@
                         <li><b>Infrastructure and database management</b>: Implemented changes to the application's infrastructure using <u>AWS</u> and <u>Terraform</u>. Supported modifications to the <u>PostgreSQL</u> database.</li>
                         <li><b>Business logic updates</b>: Integrated the <u>Stripe SDK</u> to update business logic with new plans, prices, and promotional codes.</li>
                         <li><b>Analytics tracking</b>: Created a <u>Node.js</u> library with decorators to seamlessly integrate <u>Segment SDK</u> into core services (accounts, auth, and GraphQL).</li>
-                      </ul>                                   
+                    </ul>                                   
+				</section>
+                <section>
+					<h2>PROJECTS</h2>
+					<!-- personal projects -->
+                    <h4><b>FreqTrade API – Frequi APP on AWS</b></h4>
+                    <p>
+                        Deploy a Freqtrade API Bot on AWS Tokyo region and a
+                        Frequi APP UI on AWS US region, and integrated it with
+                        Telegram, just for fun. nine-trades.com
+                    </p>
+                    <h4><b>PWA Barbershop app</b></h4>
+                    <p>
+                       PWA app build with <u>HTML, CSS, JS, Bootstrap, Node.Js, Firebase</u>. lumbermanbarbershop.com
+                    </p>
+                    <a href="https://github.com/rafaelsanin?tab=repositories">See more on Github</a>
 				</section>
 			</article>
 		</main>
