--- a/index.html
+++ b/index.html
@@ -47,51 +47,18 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills AKA "buzzwords" -->
-                    Frontend Technologies
-                    <ul>
-                        <li>React</li>
-                        <li>Redux</li>
-                        <li>JavaScript</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Bootstrap</li>
-                    </ul>
-                    Backend Technologies
-                    <ul>
-                        <li>Node.js</li>
-                        <li>Express</li>
-                        <li>Passport</li>
-                        <li>Microframeworks</li>
-                        <li>FastAPI</li>
-                        <li>Python</li>
-                        <li>PostgreSQL</li>
-                    </ul>
-                    Infrastructure and DevOps
-                    <ul>
-                        <li>AWS</li>
-                        <li>Terraform</li>
-                        <li>GCP Pub/Sub</li>
-                        <li>Elasticsearch</li>
-                        <li>MongoDB Atlas</li>
-                        <li>Apigee</li>
-                    </ul>
-                
-                    Data and Analytics
-                    <ul>
-                        <li>GraphQL/Apollo</li>
-                        <li>Segment</li>
-                        <li>Data cleansing scripts</li>
-                    </ul>
-                
-                    Version Control
-                    <ul>
-                        <li>Git</li>
-                    </ul>
-                    Other
-                    <ul>
-                        <li>Agile Methodologies (SCRUM)</li>
-                        <li>Stripe SDK</li>
-                    </ul>
+                    <h4>Frontend Technologies</h4>
+                    <p>React, Redux, JavaScript, HTML, CSS, Bootstrap</p>
+                    <h4>Backend Technologies</h4>
+                    <p>Python, Node.js, Express, Passport, Microframeworks, FastAPI, PostgreSQL, MongoDB</p>    
+                    <h4>Infrastructure and DevOps</h4>
+                    <p>AWS, Terraform, GCP, Elasticsearch</p>   
+                    <h4>Data and Analytics</h4>
+                    <p>GraphQL/Apollo, Segment, Data cleansing scripts</p>
+                    <h4>Version Control CI/CD</h4>
+                    <p>Git, Github workflow, Circle CI, Spinnaker, Jenkins </p>
+                    <h4>Other</h4>
+                    <p>Agile Methodologies (SCRUM), Pivotal, Jira, Stripe SDK</p>    
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
