Update about sentence

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>Full-stack developer and aspirant of MSc. in Engineering with more than 3 years of experience in Web UI.</p>
+					<p>Full-stack developer and aspirant of MSc. in Engineering with more than 3 years of experience and a proven ability to build user-centric applications, manage data effectively, and integrate complex systems. Experience tackling diverse web app development challenges.</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
