--- a/index.html
+++ b/index.html
@@ -47,18 +47,12 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills AKA "buzzwords" -->
-                    <h4>Frontend Technologies</h4>
-                    <p>React, Redux, JavaScript, HTML, CSS, Bootstrap</p>
-                    <h4>Backend Technologies</h4>
-                    <p>Python, Node.js, Express, Passport, Microframeworks, FastAPI, PostgreSQL, MongoDB</p>    
-                    <h4>Infrastructure and DevOps</h4>
-                    <p>AWS, Terraform, GCP, Elasticsearch</p>   
-                    <h4>Data and Analytics</h4>
-                    <p>GraphQL/Apollo, Segment, Data cleansing scripts</p>
-                    <h4>Version Control CI/CD</h4>
-                    <p>Git, Github workflow, Circle CI, Spinnaker, Jenkins </p>
-                    <h4>Other</h4>
-                    <p>Agile Methodologies (SCRUM), Pivotal, Jira, Stripe SDK</p>    
+                    <p><b>Frontend Technologies: </b>React, Redux, JavaScript, HTML, CSS, Bootstrap</p>
+                    <p><b>Backend Technologies: </b>Python, Node.js, Express, Passport, Microframeworks, FastAPI, PostgreSQL, MongoDB</p>    
+                    <p><b>Infrastructure and DevOps: </b>AWS, Terraform, GCP, Elasticsearch</p>   
+                    <p><b>Data and Analytics</b>GraphQL/Apollo, Segment, Data cleansing scripts</p>
+                    <p><b>Version Control CI/CD: </b>Git, Github Actions, Circle CI, Spinnaker, Jenkins </p>
+                    <p><b>Other: </b>Agile Methodologies (SCRUM), Pivotal, Jira, Stripe SDK</p>    
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
