--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 					<h2>SKILLS</h2>
 					<!-- your skills AKA "buzzwords" -->
                     <p><b>Frontend Technologies: </b>React, Redux, JavaScript, HTML, CSS, Bootstrap</p>
-                    <p><b>Backend Technologies: </b>Python, Node.js, Express, Passport, Microframeworks, FastAPI, PostgreSQL, MongoDB</p>    
-                    <p><b>Infrastructure and DevOps: </b>AWS, Terraform, GCP, Elasticsearch</p>   
-                    <p><b>Data and Analytics</b>GraphQL/Apollo, Segment, Data cleansing scripts</p>
+                    <p><b>Backend Technologies: </b>Python, Node.js, Express, Passport, FastAPI, PostgreSQL, MongoDB</p>    
+                    <p><b>Infrastructure and DevOps: </b>AWS, Terraform, GCP</p>   
+                    <p><b>Data and Analytics: </b>GraphQL/Apollo, Segment, Elasticsearch, Data cleansing scripts</p>
                     <p><b>Version Control CI/CD: </b>Git, Github Actions, Circle CI, Spinnaker, Jenkins </p>
                     <p><b>Other: </b>Agile Methodologies (SCRUM), Pivotal, Jira, Stripe SDK</p>    
 				</section>
@@ -67,6 +67,12 @@
                 <section>
 					<h2>COURSE/CERTIFICATIONS</h2>
 					<!-- your courses/certifications -->
+                    <b>Python PCAP Udemy course</b>
+                    <p>Pass Certified Associate in Python Programming</p>
+                    <b>FrontEndMasters</b>
+                    <p>
+                        Web developer path
+                    </p>
                     <b>FrontEndMasters</b>
                     <p>
                         Web developer path
