--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/rafaelsanin">rafaelsanin</a>
+                        <a href="https://github.com/rafaelsanin">rafaelsanin</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/rafasanin">rafasanin (SoftServe)</a>
+                        <a href="https://github.com/rafasanin">rafasanin (SoftServe)</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/in/rafaelsanin">rafaelsanin</a>
+                        <a href="https://linkedin.com/in/rafaelsanin">rafaelsanin</a>
                     </p>
 
 				</section>
@@ -84,9 +84,9 @@
                     <p><a href="https://www.linkedin.com/in/victor-camargo-4266684a/">Prof. Victor Camargo</a></p>
                     <b>Agile Methodologies: SCRUM</b>
                     <p>
-                        Eafit University MSc. elective course 
+                        Eafit University MSc. elective course
                     </p>
-                    <a href="file:///C:/Users/rsanies9/Desktop/linkedin.com/in/césar-jesús-pardo-calvache-01a82b2a">Prof. Cesar Pardo</a>
+                    <a href="https://www.linkedin.com/in/césar-jesús-pardo-calvache-01a82b2a">Prof. Cesar Pardo</a>
 				</section> 
                 <section>
 					<h2>LANGUAGES</h2>
