--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </p>
           <p><b>RDBMS: </b>PostgreSQL</p>
           <p><b>NoSQL: </b>MongoDB, Elasticsearch</p>
-          <p><b>Virtualization Tools: </b>Docker</p>
+          <p><b>Containerization Tools: </b>Docker</p>
           <p>
             <b>Methodologies: </b>Agile, Scrum, Test Driven Development, Pair
             Programming
