--- a/index.html
+++ b/index.html
@@ -1,230 +1,219 @@
 <html>
-  <head>
-    <link href="style.css" rel="stylesheet" />
-    <title>Rafael Sanin CV</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-  </head>
 
-  <body>
-    <header id="header">
-      <!-- resume header with your name and title -->
-      <h1><b>RAFAEL</b> SANIN</h1>
-      <hr />
-      Full-Stack Developer
-      <hr />
-    </header>
-    <main>
-      <article id="mainLeft">
-        <section>
-          <h2>CONTACT</h2>
-          <!-- contact info including social media -->
-          <p>
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-            <a href="mailto:rsanies9@gmail.com">rsanies9@gmail.com</a>
-          </p>
-          <p>
-            <i class="fab fa-github" aria-hidden="true"></i>
-            <a href="https://github.com/rafaelsanin">rafaelsanin</a>
-          </p>
-          <p>
-            <i class="fab fa-github" aria-hidden="true"></i>
-            <a href="https://github.com/rafasanin">rafasanin (SoftServe)</a>
-          </p>
-          <p>
-            <i class="fab fa-linkedin" aria-hidden="true"></i>
-            <a href="https://linkedin.com/in/rafaelsanin">rafaelsanin</a>
-          </p>
-        </section>
-        <section>
-          <h2>SKILLS</h2>
-          <p>
-            <b>Programming Languages/Technologies: </b>Python, NumPy, Pandas,
-            JavaScript, TypeScript, Node.js, React, Redux, HTML, CSS, Sass, SQL
-          </p>
-          <p><b>RDBMS: </b>PostgreSQL</p>
-          <p><b>NoSQL: </b>MongoDB, Elasticsearch</p>
-          <p><b>Containerization Tools: </b>Docker</p>
-          <p>
-            <b>Methodologies: </b>Agile, Scrum, Test Driven Development, Pair
-            Programming
-          </p>
-          <p>
-            <b>Frameworks/Libraries: </b>Express, Passport, GraphQL, Apollo,
-            Scrapy, FastAPI, Django, Django REST framework
-          </p>
-          <p><b>Cloud Providers: </b>AWS, GCP</p>
-          <p>
-            <b>Development Tools: </b>Git, GitHub Actions, Circle CI, Jenkins,
-            Spinnaker, Visual Studio Code, Terraform
-          </p>
-          <p><b>Testing Tools: </b>Postman</p>
-        </section>
-        <section>
-          <h2>EDUCATION</h2>
-          <!-- your education -->
-          <b>Aspirant of MSc. in Engineering</b>
-          <p>Eafit University (scholarship)</p>
-          <p>2018-2020</p>
-          <b>Mechanical Engineering</b>
-          <p>Eafit University</p>
-          <p>2011-2016</p>
-        </section>
-        <section>
-          <h2>COURSE/CERTIFICATIONS</h2>
-          <!-- your courses/certifications -->
-          <b>Python PCAP Udemy course</b>
-          <p>Pass Certified Associate in Python Programming</p>
-          <b>FrontEndMasters</b>
-          <p>Web developer path</p>
-          <b>Codecademy</b>
-          <p>HTML/CSS</p>
-          <b>Advanced Digital Systems (Full-stack)</b>
-          <p>Eafit University MSc. elective course</p>
-          <p>
-            <a href="https://www.linkedin.com/in/victor-camargo-4266684a/"
-              >Prof. Victor Camargo</a
-            >
-          </p>
-          <b>Agile Methodologies: SCRUM</b>
-          <p>Eafit University MSc. elective course</p>
-          <a
-            href="https://www.linkedin.com/in/césar-jesús-pardo-calvache-01a82b2a"
-            >Prof. Cesar Pardo</a
-          >
-        </section>
-        <section>
-          <h2>LANGUAGES</h2>
-          <!-- languages proficiency -->
-          <b>English</b>
-          <p>C1</p>
-          <b>Spanish</b>
-          <p>Native</p>
-          <b>German</b>
-          <p>A2</p>
-        </section>
-      </article>
-      <article id="mainRight">
-        <section>
-          <h2>ABOUT</h2>
-          <!-- about you -->
-          <p>
-            Full-stack developer and aspirant of MSc. in Engineering with more
-            than 3 years of experience and a proven ability to build
-            user-centric applications, manage data effectively, and integrate
-            complex systems. Experience tackling diverse web app development
-            challenges.
-          </p>
-        </section>
-        <section>
-          <h2>WORK EXPERIENCE</h2>
-          <!-- your work experience -->
-          <h3><b>Intermediate Software Engineer</b></h3>
-          <p>SoftServe | sept 2023 - ongoing (5 months)</p>
-          <p>
-            As a full-stack developer for a Real Estate client, I drove key
-            improvements across both frontend and backend functionalities.
-          </p>
-          <ul>
-            <li>
-              <b>Boosted Search and Data Management</b>: Enhanced search
-              accuracy for complex addresses with <u>Elasticsearch</u> and
-              <u>MongoDB Atlas</u>, automated data cleansing scripts for
-              birthday fields of +10k documents in <u>Atlas</u>, and integrated
-              duplicate address handling in the import microservice.
-            </li>
-            <li>
-              <b>Optimized User Experience</b>: Introduced a comprehensive
-              <u>React Redux</u> modal for improved interaction, implemented
-              clear error messages, and refreshed UI aesthetics with updated
-              dropdown styles.
-            </li>
-            <li>
-              <b>Ensured Microservice Integration and Optimization</b>: Updated
-              <u>GCP pubsub</u> message payloads for seamless microservice
-              communication and fixed pagination issues for smooth API
-              integration with <u>Apigee</u>.
-            </li>
-            <li>
-              <b>Developed Additional Functionality</b>: Built custom
-              <u>Node.js</u> scripts for data manipulation and added new
-              timeline message events to enhance user engagement.
-            </li>
-          </ul>
-          <h3><b>Backend Developer</b></h3>
-          <p>AllTheRooms Inc. | mar 2021 - sept 2023 (2 years and 7 months)</p>
-          <p>
-            Provided full-stack development support for B2C and B2B
-            applications.
-          </p>
-          <ul>
-            <li>
-              <b>Full-stack development</b>: Built new features, conducted
-              testing, and fixed bugs within the B2C and B2B apps using
-              <u>Next.js</u>, <u>GraphQL/Apollo</u>, <u>Express</u>,
-              <u>Passport</u>, and <u>Micro</u> frameworks. Collaborated with
-              the data team by leveraging <u>FastAPI</u> and <u>Python</u> for
-              crawling services.
-            </li>
-            <li>
-              <b>Infrastructure and database management</b>: Implemented changes
-              to the application's infrastructure using <u>AWS</u> and
-              <u>Terraform</u>. Supported modifications to the
-              <u>PostgreSQL</u> database.
-            </li>
-            <li>
-              <b>Business logic updates</b>: Integrated the <u>Stripe SDK</u> to
-              update business logic with new plans, prices, and promotional
-              codes.
-            </li>
-            <li>
-              <b>Analytics tracking</b>: Created a <u>Node.js</u> library with
-              decorators to seamlessly integrate <u>Segment SDK</u> into core
-              services (accounts, auth, and GraphQL).
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h2>PROJECTS</h2>
-          <h4><b>Open Source in Python</b></h4>
-          <h4><b>ESCSPKF</b></h4>
-          <p>
-            An open source project that implements the ESCSPKF algorithm.
-            <a href="https://github.com/rafaelsanin/ESCSPKF">View on GitHub</a>
-          </p>
-          <h4><b>ESCToolbox Python</b></h4>
-          <p>
-            An open source project that implements the ESC algorithm.
-            <a href="https://github.com/rafaelsanin/esctoolbox-python"
-              >View on GitHub</a
-            >
-          </p>
-          <h4><b>SIM-PCM-SCM Python</b></h4>
-          <p>
-            An open source project that implements a Li-ion battery simulator.
-            <a href="https://github.com/rafaelsanin/sim-PCM-SCM-python"
-              >View on GitHub</a
-            >
-          </p>
-          <h4><b>FreqTrade API – Frequi APP on AWS</b></h4>
-          <p>
-            Deploy a Freqtrade API Bot on AWS Tokyo region and a Frequi APP UI
-            on AWS US region, and integrated it with Telegram, just for fun.
-            nine-trades.com
-          </p>
-          <h4><b>PWA Barbershop app</b></h4>
-          <p>
-            PWA app build with
-            <u>HTML, CSS, JS, Bootstrap, Node.Js, Firebase</u>.
-            lumbermanbarbershop.com
-          </p>
-          <a href="https://github.com/rafaelsanin?tab=repositories"
-            >See more on Github</a
-          >
-        </section>
-      </article>
-    </main>
-  </body>
+<head>
+  <link href="style.css" rel="stylesheet" />
+  <title>Rafael Sanin CV</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+</head>
+
+<body>
+  <header id="header">
+    <!-- resume header with your name and title -->
+    <h1><b>RAFAEL</b> SANIN</h1>
+    <hr />
+    Full-Stack Developer
+    <hr />
+  </header>
+  <main>
+    <article id="mainLeft">
+      <section>
+        <h2>CONTACT</h2>
+        <!-- contact info including social media -->
+        <p>
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+          <a href="mailto:rsanies9@gmail.com">rsanies9@gmail.com</a>
+        </p>
+        <p>
+          <i class="fab fa-github" aria-hidden="true"></i>
+          <a href="https://github.com/rafaelsanin">rafaelsanin</a>
+        </p>
+        <p>
+          <i class="fab fa-github" aria-hidden="true"></i>
+          <a href="https://github.com/rafasanin">rafasanin (SoftServe)</a>
+        </p>
+        <p>
+          <i class="fab fa-linkedin" aria-hidden="true"></i>
+          <a href="https://linkedin.com/in/rafaelsanin">rafaelsanin</a>
+        </p>
+      </section>
+      <section>
+        <h2>SKILLS</h2>
+        <p>
+          <b>Programming Languages/Technologies: </b>Python, NumPy, Pandas,
+          JavaScript, TypeScript, Node.js, React, Redux, HTML, CSS, Sass, SQL
+        </p>
+        <p><b>RDBMS: </b>PostgreSQL</p>
+        <p><b>NoSQL: </b>MongoDB, Elasticsearch</p>
+        <p><b>Containerization Tools: </b>Docker</p>
+        <p>
+          <b>Methodologies: </b>Agile, Scrum, Test Driven Development, Pair
+          Programming
+        </p>
+        <p>
+          <b>Frameworks/Libraries: </b>Express, Passport, GraphQL, Apollo,
+          Scrapy, FastAPI, Django, Django REST framework
+        </p>
+        <p><b>Cloud Providers: </b>AWS, GCP</p>
+        <p>
+          <b>Development Tools: </b>Git, GitHub Actions, Circle CI, Jenkins,
+          Spinnaker, Visual Studio Code, Terraform
+        </p>
+        <p><b>Testing Tools: </b>Postman</p>
+      </section>
+      <section>
+        <h2>EDUCATION</h2>
+        <!-- your education -->
+        <b>Aspirant of MSc. in Engineering</b>
+        <p>Eafit University (scholarship)</p>
+        <p>2018-2020</p>
+        <b>Mechanical Engineering</b>
+        <p>Eafit University</p>
+        <p>2011-2016</p>
+      </section>
+      <section>
+        <h2>COURSE/CERTIFICATIONS</h2>
+        <!-- your courses/certifications -->
+        <b>Django Rest Framework Udemy course</b>
+        <p>Build a Backend REST API with Python & Django - Advanced</p>
+        <b>Python PCAP Udemy course</b>
+        <p>Pass Certified Associate in Python Programming</p>
+        <b>FrontEndMasters</b>
+        <p>Web developer path</p>
+        <b>Codecademy</b>
+        <p>HTML/CSS</p>
+        <b>Advanced Digital Systems (Full-stack)</b>
+        <p>Eafit University MSc. elective course</p>
+        <p>
+          <a href="https://www.linkedin.com/in/victor-camargo-4266684a/">Prof. Victor Camargo</a>
+        </p>
+        <b>Agile Methodologies: SCRUM</b>
+        <p>Eafit University MSc. elective course</p>
+        <a href="https://www.linkedin.com/in/césar-jesús-pardo-calvache-01a82b2a">Prof. Cesar Pardo</a>
+      </section>
+      <section>
+        <h2>LANGUAGES</h2>
+        <!-- languages proficiency -->
+        <b>English</b>
+        <p>C1</p>
+        <b>Spanish</b>
+        <p>Native</p>
+        <b>German</b>
+        <p>A2</p>
+      </section>
+    </article>
+    <article id="mainRight">
+      <section>
+        <h2>ABOUT</h2>
+        <!-- about you -->
+        <p>
+          Full-stack developer and aspirant of MSc. in Engineering with more
+          than 3 years of experience and a proven ability to build
+          user-centric applications, manage data effectively, and integrate
+          complex systems. Experience tackling diverse web app development
+          challenges.
+        </p>
+      </section>
+      <section>
+        <h2>WORK EXPERIENCE</h2>
+        <!-- your work experience -->
+        <h3><b>Intermediate Software Engineer</b></h3>
+        <p>SoftServe | sept 2023 - ongoing (5 months)</p>
+        <p>
+          As a full-stack developer for a Real Estate client, I drove key
+          improvements across both frontend and backend functionalities.
+        </p>
+        <ul>
+          <li>
+            <b>Boosted Search and Data Management</b>: Enhanced search
+            accuracy for complex addresses with <u>Elasticsearch</u> and
+            <u>MongoDB Atlas</u>, automated data cleansing scripts for
+            birthday fields of +10k documents in <u>Atlas</u>, and integrated
+            duplicate address handling in the import microservice.
+          </li>
+          <li>
+            <b>Optimized User Experience</b>: Introduced a comprehensive
+            <u>React Redux</u> modal for improved interaction, implemented
+            clear error messages, and refreshed UI aesthetics with updated
+            dropdown styles.
+          </li>
+          <li>
+            <b>Ensured Microservice Integration and Optimization</b>: Updated
+            <u>GCP pubsub</u> message payloads for seamless microservice
+            communication and fixed pagination issues for smooth API
+            integration with <u>Apigee</u>.
+          </li>
+          <li>
+            <b>Developed Additional Functionality</b>: Built custom
+            <u>Node.js</u> scripts for data manipulation and added new
+            timeline message events to enhance user engagement.
+          </li>
+        </ul>
+        <h3><b>Backend Developer</b></h3>
+        <p>AllTheRooms Inc. | mar 2021 - sept 2023 (2 years and 7 months)</p>
+        <p>
+          Provided full-stack development support for B2C and B2B
+          applications.
+        </p>
+        <ul>
+          <li>
+            <b>Full-stack development</b>: Built new features, conducted
+            testing, and fixed bugs within the B2C and B2B apps using
+            <u>Next.js</u>, <u>GraphQL/Apollo</u>, <u>Express</u>,
+            <u>Passport</u>, and <u>Micro</u> frameworks. Collaborated with
+            the data team by leveraging <u>FastAPI</u> and <u>Python</u> for
+            crawling services.
+          </li>
+          <li>
+            <b>Infrastructure and database management</b>: Implemented changes
+            to the application's infrastructure using <u>AWS</u> and
+            <u>Terraform</u>. Supported modifications to the
+            <u>PostgreSQL</u> database.
+          </li>
+          <li>
+            <b>Business logic updates</b>: Integrated the <u>Stripe SDK</u> to
+            update business logic with new plans, prices, and promotional
+            codes.
+          </li>
+          <li>
+            <b>Analytics tracking</b>: Created a <u>Node.js</u> library with
+            decorators to seamlessly integrate <u>Segment SDK</u> into core
+            services (accounts, auth, and GraphQL).
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>PROJECTS</h2>
+        <h4><b>Retrieval Augmented Generation (RAG) AI Agent Chat</b></h4>
+        <p>
+          Mockup project built with <u>DRF</u>, <u>Django</u> + <u>React</u> and <u>Langchain</u>.
+          <a href="https://github.com/rafaelsanin/django-react-rag-demo">View on GitHub</a>
+        </p>
+        <h4><b>Open Source in Python</b></h4>
+        <h4><b>ESCSPKF</b></h4>
+        <p>
+          An open source project that implements the ESCSPKF algorithm.
+          <a href="https://github.com/rafaelsanin/ESCSPKF">View on GitHub</a>
+        </p>
+        <h4><b>ESCToolbox Python</b></h4>
+        <p>
+          An open source project that implements the ESC algorithm.
+          <a href="https://github.com/rafaelsanin/esctoolbox-python">View on GitHub</a>
+        </p>
+        <h4><b>SIM-PCM-SCM Python</b></h4>
+        <p>
+          An open source project that implements a Li-ion battery simulator.
+          <a href="https://github.com/rafaelsanin/sim-PCM-SCM-python">View on GitHub</a>
+        </p>
+        <h4><b>PWA Barbershop app</b></h4>
+        <p>
+          PWA app build with
+          <u>HTML, CSS, JS, Bootstrap, Node.Js, Firebase</u>.
+          lumbermanbarbershop.com
+        </p>
+        <a href="https://github.com/rafaelsanin?tab=repositories">See more on Github</a>
+      </section>
+    </article>
+  </main>
+</body>
+
 </html>
