Update job title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- resume header with your name and title -->
     <h1><b>RAFAEL</b> SANIN</h1>
     <hr />
-    Full-Stack Developer
+    Software Engineer
     <hr />
   </header>
   <main>
@@ -81,7 +81,7 @@
         <p>Web developer path</p>
         <b>Codecademy</b>
         <p>HTML/CSS</p>
-        <b>Advanced Digital Systems (Full-stack)</b>
+        <b>Advanced Digital Systems</b>
         <p>Eafit University MSc. elective course</p>
         <p>
           <a href="https://www.linkedin.com/in/victor-camargo-4266684a/">Prof. Victor Camargo</a>
@@ -106,7 +106,7 @@
         <h2>ABOUT</h2>
         <!-- about you -->
         <p>
-          Full-stack developer and aspirant of MSc. in Engineering with more
+          Software Engineer and aspirant of MSc. in Engineering with more
           than 3 years of experience and a proven ability to build
           user-centric applications, manage data effectively, and integrate
           complex systems. Experience tackling diverse web app development
@@ -119,7 +119,7 @@
         <h3><b>Intermediate Software Engineer</b></h3>
         <p>SoftServe | sept 2023 - ongoing (5 months)</p>
         <p>
-          As a full-stack developer for a Real Estate client, I drove key
+          As a Software Engineer for a Real Estate client, I drove key
           improvements across both frontend and backend functionalities.
         </p>
         <ul>
