update work experience duration

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <h2>WORK EXPERIENCE</h2>
         <!-- your work experience -->
         <h3><b>Intermediate Software Engineer</b></h3>
-        <p>SoftServe | sept 2023 - ongoing (5 months)</p>
+        <p>SoftServe | sept 2023 - july 2024 (10 months)</p>
         <p>
           As a Software Engineer for a Real Estate client, I drove key
           improvements across both frontend and backend functionalities.
