Add course certification

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       <section>
         <h2>COURSE/CERTIFICATIONS</h2>
         <!-- your courses/certifications -->
+        <b><a href="https://ude.my/UC-20c48e7a-7011-44eb-9fb0-f6a67870634d">AWS & Typescript Masterclass - CDK, Serverless, React</a></b>
+        <p>Project with CDK, CloudFormation, Cognito, Lambda, and Amplify</p>
         <b>Django Rest Framework Udemy course</b>
         <p>Build a Backend REST API with Python & Django - Advanced</p>
         <b>Python PCAP Udemy course</b>
